fixing tags in dark mode

--- a/themes/forfounders/source/css/style.scss
+++ b/themes/forfounders/source/css/style.scss
@@ -52,6 +52,11 @@ body.darkmode--activated {
         background-color: rgb(55, 59, 59) !important;
         color: #f5ecde;
     }
+
+    .article-tag {
+        background-color: rgb(55, 59, 59) !important;
+        color: #f5ecde !important;
+    }
 }
 
 
